--- a/src/asciimon.tex
+++ b/src/asciimon.tex
@@ -2667,9 +2667,9 @@ function addInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \TextField[backgroundcolor=white, bordercolor=white,
-                    name=hintbox, readonly, hidden]{}
-                \PushButton[name=tooltipbtn, bordercolor=, borderwidth=0]{%
+                \TextField[name=hintbox,%
+                    bordercolor=white, backgroundcolor=white, readonly, hidden]{}
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -2684,14 +2684,14 @@ function addInfoText(text) {
         \begin{multicols}{2}
 
             \begin{tcolorbox}%
-                \TextField[name=enemyname, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly]{}\newline
+                \TextField[name=enemyname, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=enemyhp, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly]{}\newline
+                \TextField[name=enemyhp, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=enemystatus, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly]{}%
+                \TextField[name=enemystatus, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}%
             \end{tcolorbox}%
 
             \vspace{2.5cm}
@@ -2699,8 +2699,8 @@ function addInfoText(text) {
             \begin{center}
                 \xintFor* #1 in {\xintSeq{0}{\boardCharsH-1}} \do {%
                     \TextField[%
-                        width=\blocksizeW, height=\blocksizeH,%
-                        bordercolor=white, name=player#1, readonly%
+                        name=player#1, width=\blocksizeW, height=\blocksizeH,%
+                        bordercolor=, backgroundcolor=, readonly%
                     ]{}%
                     \\[0pt]%
                 }%
@@ -2711,8 +2711,8 @@ function addInfoText(text) {
             \begin{center}
                 \xintFor* #1 in {\xintSeq{0}{\boardCharsH-1}} \do {%
                     \TextField[%
-                        width=\blocksizeW, height=\blocksizeH,%
-                        bordercolor=white, name=enemy#1, readonly%
+                        name=enemy#1, width=\blocksizeW, height=\blocksizeH,%
+                        bordercolor=, backgroundcolor=, readonly%
                     ]{}%
                     \\[0pt]%
                 }%
@@ -2721,14 +2721,14 @@ function addInfoText(text) {
             \vspace{2.5cm}
 
             \begin{tcolorbox}%
-                \TextField[name=playername, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly]{}\newline
+                \TextField[name=playername, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=playerhp, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly]{}\newline
+                \TextField[name=playerhp, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}\newline
 
-                \TextField[name=playerstatus, bordercolor=black, backgroundcolor=,
-                    width=\linewidth, readonly]{}%
+                \TextField[name=playerstatus, width=\linewidth,
+                    bordercolor=black, backgroundcolor=, readonly]{}%
             \end{tcolorbox}%
 
         \end{multicols}
@@ -2755,50 +2755,50 @@ function addInfoText(text) {
         %%%%%%%%%%%%%%%%
         \begin{center}
             \begin{tcolorbox}
-                \TextField[name=info, bordercolor=, backgroundcolor=, width=\linewidth, readonly]{}
+                \TextField[name=info, width=\linewidth, bordercolor=, backgroundcolor=, readonly]{}
             \end{tcolorbox}
 
             % Game related buttons
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=button1, bordercolor=, borderwidth=0]{
+                \PushButton[name=button1, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button1txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly]{}%
+                        \TextField[name=button1txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=button2, bordercolor=, borderwidth=0]{
+                \PushButton[name=button2, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button2txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly]{}%
+                        \TextField[name=button2txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 }\\
-                \PushButton[name=button3, bordercolor=, borderwidth=0]{
+                \PushButton[name=button3, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button3txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly]{}%
+                        \TextField[name=button3txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=button4, bordercolor=, borderwidth=0]{
+                \PushButton[name=button4, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
-                        \TextField[name=button4txt, bordercolor=, backgroundcolor=,
-                            width=\linewidth, readonly]{}%
+                        \TextField[name=button4txt, width=\linewidth,
+                            bordercolor=, backgroundcolor=, readonly]{}%
                         \strut
                     \end{tcolorbox}
                 }\\
-                \PushButton[name=back, bordercolor=, borderwidth=0]{
+                \PushButton[name=back, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Back\strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=restart, bordercolor=, borderwidth=0]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart game\strut
@@ -2813,9 +2813,8 @@ function addInfoText(text) {
                 {On, Off}
 
             \xintFor* #1 in {\xintSeq{0}{\atkAnimCells-1}} \do {%
-                \TextField[%
-                    name=atkanim#1, bordercolor=, backgroundcolor=,
-                    borderwidth=0pt, readonly, hidden
+                \TextField[name=atkanim#1,
+                    bordercolor=, backgroundcolor=, borderwidth=0pt, readonly, hidden
                 ]{}%
             }%
 
