--- a/src/chess.tex
+++ b/src/chess.tex
@@ -1287,7 +1287,7 @@ function printInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=, borderwidth=0]{%
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -1318,8 +1318,8 @@ function printInfoText(text) {
                 \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
                     \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
-                            name=cell#1-#2, bordercolor=white,%
-                            width=\blocksize, height=\blocksize, align=1, readonly%
+                            name=cell#1-#2, width=\blocksize, height=\blocksize,
+                            bordercolor=white, align=1, readonly%
                         ]{}%
                         \xintifForLast{}{\hspace{3pt}}%
                     }\vspace{3pt}\\[-1pt]%
@@ -1346,16 +1346,16 @@ function printInfoText(text) {
 
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
                 \begin{tcolorbox}
-                    \TextField[name=moves, bordercolor=gray, width=\linewidth]{}
+                    \TextField[name=moves, width=\linewidth, bordercolor=gray]{}
                 \end{tcolorbox} &%
-                \PushButton[name=process, bordercolor=white]{
+                \PushButton[name=process, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Process moves
                         \strut
                     \end{tcolorbox}
                 }\\[-0.5cm]
-                \PushButton[name=restart, bordercolor=white]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         Restart
