--- a/src/minesweeper.tex
+++ b/src/minesweeper.tex
@@ -449,7 +449,7 @@ function printInfoText(text) {
         \columnbreak
             % Tooltip object
             \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=, borderwidth=0]{%
+                \PushButton[name=tooltipbtn, bordercolor=, backgroundcolor=, borderwidth=0]{%
                     \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
                         \centering?\strut{}
                     \end{tcolorbox}%
@@ -480,8 +480,8 @@ function printInfoText(text) {
                 \xintFor* #1 in {\xintSeq{0}{\boardHeight-1}} \do {%
                     \xintFor* #2 in {\xintSeq{0}{\boardWidth-1}} \do {%
                         \TextField[%
-                            name=cell#1-#2, bordercolor=white,%
-                            width=\blocksize, height=\blocksize, align=1, readonly%
+                            name=cell#1-#2, width=\blocksize, height=\blocksize,%
+                            bordercolor=white, align=1, readonly%
                         ]{}%
                         \xintifForLast{}{\hspace{3pt}}%
                     }\vspace{3pt}\\[-1pt]%
@@ -492,7 +492,7 @@ function printInfoText(text) {
         % Game related buttons
         \begin{center}%
             \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
-                \PushButton[name=reveal, bordercolor=white]{
+                \PushButton[name=reveal, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         \TextField[name=revealtxt, height=0.35cm, width=0.5cm,
@@ -500,7 +500,7 @@ function printInfoText(text) {
                         \strut
                     \end{tcolorbox}
                 } &
-                \PushButton[name=lock, bordercolor=white]{
+                \PushButton[name=lock, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         \TextField[name=locktxt, height=0.35cm, width=0.5cm,
@@ -508,7 +508,7 @@ function printInfoText(text) {
                         \strut
                     \end{tcolorbox}
                 } \\
-                \PushButton[name=restart, bordercolor=white]{
+                \PushButton[name=restart, bordercolor=, backgroundcolor=, borderwidth=0]{
                     \begin{tcolorbox}
                         \centering
                         \ChoiceMenu[name=percentage, height=0.35cm, width=0.5cm, combo,
